# Rubiks

./: CMakeLists.txt  main.cpp
